--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Ba coiosule ...!</h1>
     <h1>Ba mucosule...!</h1>
     <h1>Ba frumosule...!</h1>
+    <h1> ba simpaticule...din ubuntu</h1>
 </body>
 </html>
