--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <h1>Bine ai venit fraierilor!</h1>
     <h1>Bine ai venit fraierilor ce face prostul [sta de director sugeme-ar ...!</h1>
     <h1>Ba coiosule ...!</h1>
+    <h1>Ba mucosule...!</h1>
+    <h1>Ba frumosule...!</h1>
 </body>
 </html>
